# lgtm-reader

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cbz.rs  main.rs  util.rs
src/lib/: content.svelte  test.svelte  thumbnail-card.svelte
src/routes/: +layout.svelte  +page.svelte
