[package]
name = "lgtm-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "path-all",
    "fs-read-dir",
    "fs-read-file",
    "fs-write-file",
    "fs-remove-file",
    "fs-remove-dir",
    "fs-exists",
    "shell-open",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.107"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# archive
zip = { version = "0.6.6", default-features = true }
tar = { version = "0.4.40" }

base64 = { version = "0.21.4" }
regex = { version = "1.10.2" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
